--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,11 +8,11 @@
     "compile": "tsc --noEmit",
     "prebuild": "npm run check && npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/cli/cjs/package.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/cli/esm/package.json",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ./build/cjs/package.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ./build/esm/package.json",
     "postbuild": "npm run copy:files && npm run copy:bin && node ../../support/postbuild.cjs",
-    "copy:files": "cp README.md package.json ../../LICENSE ../../build/cli",
-    "copy:bin": "cp -R bin ../../build/cli/bin",
+    "copy:files": "cp README.md package.json ../../LICENSE ./build",
+    "copy:bin": "cp -R bin ./build/bin",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
@@ -22,7 +22,7 @@
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/cli",
+    "clean:dist": "rimraf ./build",
     "clean:cover": "rimraf ../../coverage/cli"
   },
   "dependencies": {
