--- a/packages/cli/tsconfig-build-cjs.json
+++ b/packages/cli/tsconfig-build-cjs.json
@@ -4,7 +4,7 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "rootDir": "src",
-    "outDir": "../../build/cli/cjs",
+    "outDir": "./build/cjs",
     "declaration": false
   },
   "include": ["src"]
