--- a/packages/common/tsconfig-build-cjs.json
+++ b/packages/common/tsconfig-build-cjs.json
@@ -4,7 +4,7 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "rootDir": "src",
-    "outDir": "../../build/common/cjs",
+    "outDir": "./build/cjs",
     "declaration": false
   }
 }
