--- a/packages/common/tsconfig-build-esm.json
+++ b/packages/common/tsconfig-build-esm.json
@@ -4,7 +4,7 @@
     "module": "ES2020",
     "moduleResolution": "Node",
     "rootDir": "src",
-    "outDir": "../../build/common/esm",
-    "declarationDir": "../../build/common/types"
+    "outDir": "./build/esm",
+    "declarationDir": "./build/types"
   }
 }
