--- a/packages/core/tsconfig-build-esm.json
+++ b/packages/core/tsconfig-build-esm.json
@@ -4,8 +4,8 @@
     "module": "ES2020",
     "moduleResolution": "Node",
     "rootDir": "src",
-    "outDir": "../../build/core/esm",
-    "declarationDir": "../../build/core/types"
+    "outDir": "./build/esm",
+    "declarationDir": "./build/types"
   },
   "include": ["src"]
 }
