--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -8,10 +8,10 @@
     "compile": "tsc --noEmit",
     "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/kafka/cjs/package.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/kafka/esm/package.json",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ./build/cjs/package.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ./build/esm/package.json",
     "postbuild": "npm run postbuild:copy && node ../../support/postbuild.cjs",
-    "postbuild:copy": "cp README.md package.json ../../LICENSE ../../build/kafka",
+    "postbuild:copy": "cp README.md package.json ../../LICENSE ./build",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
@@ -21,7 +21,7 @@
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/kafka",
+    "clean:dist": "rimraf ./build",
     "clean:cover": "rimraf ../../coverage/kafka"
   },
   "dependencies": {
