--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -8,9 +8,9 @@
     "compile": "tsc --noEmit",
     "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ../../build/nestjs/cjs/package.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ../../build/nestjs/esm/package.json",
-    "postbuild": "cp README.md package.json ../../LICENSE ../../build/nestjs && node ../../support/postbuild.cjs",
+    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ./build/cjs/package.json",
+    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ./build/esm/package.json",
+    "postbuild": "cp README.md package.json ../../LICENSE ./build && node ../../support/postbuild.cjs",
     "lint": "eslint . --max-warnings=0",
     "format": "prettier . --write --log-level=warn",
     "test": "jest --passWithNoTests",
@@ -18,7 +18,7 @@
     "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ../../build/nestjs",
+    "clean:dist": "rimraf ./build",
     "clean:cover": "rimraf ../../coverage/nestjs"
   },
   "dependencies": {
