--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "preclean": "rimraf build coverage",
     "clean": "rman run clean",
     "build": "rman build",
-    "test": "jest --passWithNoTests",
+    "test": "NODE_OPTIONS=\"--no-experimental-require-module\" jest --passWithNoTests",
     "precover": "rimraf coverage",
     "cover": "jest --passWithNoTests --coverage",
     "format": "prettier . --write --log-level=warn",
     "precitest": "rimraf coverage reports",
-    "citest": "jest --passWithNoTests --runInBand --coverage --testTimeout=30000",
+    "citest": "NODE_OPTIONS=\"--no-experimental-require-module\" jest --passWithNoTests --runInBand --coverage --testTimeout=30000 --bail=10 --forceExit",
+    "qc": "rman run lint && rman run check",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -32,8 +33,8 @@
     "@panates/eslint-config-ts": "^2.0.4",
     "@panates/tsconfig": "^2.0.4",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.10",
-    "@types/supertest": "^6.0.2",
+    "@types/node": "^22.13.13",
+    "@types/supertest": "^6.0.3",
     "babel-jest": "^29.7.0",
     "chalk": "^5.4.1",
     "esbuild": "^0.25.1",
@@ -44,17 +45,24 @@
     "jest-junit": "^16.0.0",
     "jest-preset-angular": "^14.5.3",
     "madge": "^8.0.0",
-    "npm-check-updates": "^17.1.15",
+    "npm-check-updates": "^17.1.16",
     "npm-run-path": "^6.0.0",
     "prettier": "^3.5.3",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^6.0.1",
     "ts-cleanup": "^1.3.0",
-    "ts-jest": "^29.2.6",
+    "ts-jest": "^29.3.0",
     "ts-loader": "^9.5.2",
     "ts-node": "github:TypeStrong/ts-node#main",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2"
+  },
+  "overrides": {
+    "npmlog": "^7.0.1",
+    "rimraf": "^6.0.1",
+    "glob": "^11.0.1",
+    "babel-plugin-istanbul": "^7.0.0",
+    "test-exclude": "^7.0.1"
   }
 }
