--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -33,19 +33,20 @@
     "ts-gems": "^3.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.3",
-    "@angular/cli": "^19.2.3",
-    "@angular/compiler": "^19.2.2",
-    "@angular/compiler-cli": "^19.2.2",
-    "@angular/platform-browser": "^19.2.2",
-    "@angular/platform-browser-dynamic": "^19.2.2",
+    "@angular-devkit/build-angular": "^19.2.4",
+    "@angular/cli": "^19.2.4",
+    "@angular/compiler": "^19.2.3",
+    "@angular/compiler-cli": "^19.2.3",
+    "@angular/platform-browser": "^19.2.3",
+    "@angular/platform-browser-dynamic": "^19.2.3",
     "@opra/client": "^1.12.3",
     "core-js": "^3.41.0",
     "cross-fetch": "^4.1.0",
     "express": "^4.21.2",
+    "jest-preset-angular": "^14.5.3",
     "ng-packagr": "^19.2.0",
     "superagent": "^10.2.0",
-    "supertest": "^7.0.0",
+    "supertest": "^7.1.0",
     "zone.js": "^0.15.0"
   },
   "repository": {
