--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,9 @@ concurrency:
 
 jobs:
   test:
+    if: >
+      (github.event_name != 'pull_request' || github.head_ref != 'dev')
+      && !contains(github.event.head_commit.message, 'no-test')
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
