--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,11 +26,11 @@
   },
   "dependencies": {
     "accepts": "^1.3.8",
-    "rxjs": "^7.0.0 || ^8.0.0",
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
-    "@opra/common": "^1.12.3"
+    "@opra/common": "^1.12.3",
+    "rxjs": "^7.0.0 || ^8.0.0"
   },
   "devDependencies": {
     "@browsery/type-is": "^1.6.18-r8",
