--- a/.github/workflows/qc.yml
+++ b/.github/workflows/qc.yml
@@ -11,7 +11,7 @@ on:
 
 # Only one run per branch at a time
 concurrency:
-  group: qc-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
