--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,8 +31,17 @@ concurrency:
 jobs:
   test:
     if: >
-      (github.event_name != 'pull_request' || github.head_ref != 'dev')
-      && !contains(github.event.head_commit.message, 'no-test')
+      github.event_name == 'workflow_dispatch' ||
+      (
+        github.event_name == 'push' &&
+        !(
+          contains(github.event.head_commit.message, 'no-test') ||
+          ( 
+            startsWith(github.event.head_commit.message, 'Merge pull request') &&
+            contains(github.event.head_commit.message, '/dev')
+          )
+        )
+      )
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
@@ -91,7 +100,7 @@ jobs:
         uses: panates/ghac-setup-node@v1
         with:
           node-version: '20.18.1'
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Install rman
         run: npm install rman -g
