--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -70,7 +70,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/client"
   },
   "sideEffects": false,
@@ -90,5 +90,8 @@
     "http",
     "request",
     "fetch"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
