--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -81,7 +81,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/common"
   },
   "engines": {
@@ -99,5 +99,8 @@
   "keywords": [
     "opra",
     "common"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
