--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -55,7 +55,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/core"
   },
   "engines": {
@@ -75,5 +75,8 @@
     "rest",
     "api",
     "core"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
