--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -107,7 +107,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/http"
   },
   "engines": {
@@ -131,5 +131,8 @@
     "web",
     "swagger",
     "raml"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
