--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -60,7 +60,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/kafka"
   },
   "engines": {
@@ -78,5 +78,8 @@
     "opra",
     "kafka",
     "consumer"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
