--- a/packages/nestjs-kafka/package.json
+++ b/packages/nestjs-kafka/package.json
@@ -68,7 +68,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/nestjs-kafka"
   },
   "engines": {
