--- a/packages/rabbitmq/package.json
+++ b/packages/rabbitmq/package.json
@@ -63,7 +63,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/rabbitmq"
   },
   "engines": {
@@ -85,5 +85,8 @@
     "message",
     "queue",
     "consumer"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
