--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,7 +60,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/client"
   },
   "engines": {
@@ -80,5 +80,8 @@
     "cli",
     "tool",
     "oprimp"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
