--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -58,7 +58,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/mongodb"
   },
   "engines": {
@@ -77,5 +77,8 @@
     "opra",
     "mongodb",
     "adapter"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
