--- a/packages/nestjs-http/package.json
+++ b/packages/nestjs-http/package.json
@@ -63,7 +63,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/nestjs-http"
   },
   "engines": {
