--- a/packages/nestjs-rabbitmq/package.json
+++ b/packages/nestjs-rabbitmq/package.json
@@ -65,7 +65,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/nestjs-rabbitmq"
   },
   "engines": {
