--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -61,7 +61,7 @@
   "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/opra.git",
+    "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/sqb"
   },
   "engines": {
@@ -80,5 +80,8 @@
     "opra",
     "sqb",
     "adapter"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
