--- a/packages/rabbitmq/package.json
+++ b/packages/rabbitmq/package.json
@@ -24,6 +24,7 @@
     "clean:cover": "rimraf ../../coverage/rabbitmq"
   },
   "dependencies": {
+    "@jsopen/objects": "^1.5.2",
     "@browsery/type-is": "^1.6.18-r8",
     "content-type": "^1.0.5",
     "iconv-lite": "^0.6.3",
@@ -34,13 +35,12 @@
   "peerDependencies": {
     "@opra/common": "^1.16.1",
     "@opra/core": "^1.16.1",
-    "amqp-connection-manager": "^4.1.14",
-    "amqplib": "^0.10.7"
+    "amqplib": "^0.10.7",
+    "rabbitmq-client": ">=5.0.0 <6"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
     "@types/accepts": "^1.3.7",
-    "@types/amqplib": "^0.10.7",
     "expect": "^29.7.0",
     "ts-gems": "^3.11.3"
   },
