--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -24,29 +24,29 @@
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
-    "@angular/common": "^18.0.0 || ^19.0.0",
-    "@angular/core": "^18.0.0 || ^19.0.0",
+    "@angular/common": ">=18.0.0",
+    "@angular/core": ">=18.0.0",
     "@browsery/type-is": "^1.6.18-r8",
     "@opra/client": "^1.17.3",
     "rxjs": ">=7.8.0 <8",
     "ts-gems": "^3.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.13",
-    "@angular/cli": "^19.2.13",
-    "@angular/compiler": "^19.2.12",
-    "@angular/compiler-cli": "^19.2.12",
-    "@angular/platform-browser": "^19.2.12",
-    "@angular/platform-browser-dynamic": "^19.2.12",
+    "@angular-devkit/build-angular": "^20.0.2",
+    "@angular/cli": "^20.0.2",
+    "@angular/compiler": "^20.0.3",
+    "@angular/compiler-cli": "^20.0.3",
+    "@angular/platform-browser": "^20.0.3",
+    "@angular/platform-browser-dynamic": "^20.0.3",
     "@opra/client": "^1.17.3",
-    "core-js": "^3.42.0",
+    "core-js": "^3.43.0",
     "cross-fetch": "^4.1.0",
-    "expect": "^29.7.0",
+    "expect": "^30.0.0",
     "express": "^5.1.0",
-    "ng-packagr": "^19.2.2",
+    "ng-packagr": "^20.0.0",
     "superagent": "^10.2.1",
     "supertest": "^7.1.1",
-    "zone.js": "^0.15.0"
+    "zone.js": "^0.15.1"
   },
   "type": "module",
   "repository": {
