--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -32,6 +32,7 @@
     "@browsery/type-is": "^1.6.18-r8",
     "@jsopen/objects": "^1.6.2",
     "fast-tokenizer": "^1.7.0",
+    "hash-object": "^5.0.1",
     "putil-promisify": "^1.10.1",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.2.2",
