--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@panates/eslint-config": "^2.0.4",
-    "@panates/eslint-config-ts": "^2.0.4",
-    "@panates/tsconfig": "^2.0.4",
-    "@swc/core": "^1.12.1",
+    "@panates/eslint-config": "^2.0.6",
+    "@panates/eslint-config-ts": "^2.0.6",
+    "@panates/tsconfig": "^2.0.6",
+    "@swc/core": "^1.12.3",
     "@swc/helpers": "^0.5.17",
     "@swc-node/register": "^1.10.10",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.0.1",
+    "@types/node": "^24.0.3",
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
     "c8": "^10.1.3",
@@ -46,7 +46,7 @@
     "globals": "^16.2.0",
     "husky": "^9.1.7",
     "madge": "^8.0.0",
-    "mocha": "^11.6.0",
+    "mocha": "11.6.0",
     "npm-check-updates": "^18.0.1",
     "npm-run-path": "^6.0.0",
     "prettier": "^3.5.3",
