--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -32,7 +32,7 @@
     "@browsery/type-is": "^1.6.18-r8",
     "@jsopen/objects": "^1.6.2",
     "fast-tokenizer": "^1.7.0",
-    "hash-object": "^5.0.1",
+    "object-hash": "^3.0.0",
     "putil-promisify": "^1.10.1",
     "putil-varhelpers": "^1.6.5",
     "reflect-metadata": "^0.2.2",
@@ -46,6 +46,7 @@
     "@browsery/stream": "^4.7.0-r1",
     "@browsery/util": "^0.12.6-r2",
     "@types/encodeurl": "^1.0.3",
+    "@types/object-hash": "^3.0.6",
     "@types/validator": "^13.15.2",
     "expect": "^30.0.2",
     "path-browserify": "^1.0.1",
