--- a/.ncurc.yml
+++ b/.ncurc.yml
@@ -1,4 +1,4 @@
 workspaces: true
 peer: true
 dep: prod,dev,optional,peer
-rejectVersion: "/(\\|\\|)|(&&)|>|<|^\\^/"
+rejectVersion: "/(\\|\\|)|(&&)|>|<|^[0-9]/"
