--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -39,7 +39,8 @@
     "@angular/platform-browser": "19.2.14",
     "@angular/platform-browser-dynamic": "19.2.14",
     "@opra/client": "^1.19.2",
-    "core-js": "^3.44.0",
+    "rxjs": "^7.8.2",
+    "core-js": "^3.45.0",
     "cross-fetch": "^4.1.0",
     "expect": "^30.0.5",
     "express": "^5.1.0",
