refactor: Created separate namespace (mq) for message queue protocols. Renamed all classes from RpcXX to MQXX

--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@opra/kafka",
   "version": "1.19.4",
-  "description": "Opra Kafka package",
+  "description": "Opra Kafka adapter",
   "author": "Panates",
   "license": "MIT",
   "scripts": {
