--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -2,6 +2,7 @@
   "extends": "@panates/tsconfig/node.json",
   "compilerOptions": {
     "types": ["node"],
-    "module": "NodeNext",
+    "module": "ES2020",
+    "moduleResolution": "Node"
   }
 }
