--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,7 +25,7 @@
     "clean:cover": "rimraf ../../coverage/cli"
   },
   "dependencies": {
-    "@browsery/type-is": "^1.6.18-r8",
+    "@browsery/type-is": "^2.0.1",
     "ansi-colors": "^4.1.3",
     "commander": "^14.0.1",
     "js-string-escape": "^1.0.1",
