--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -32,19 +32,19 @@
     "ts-gems": "^3.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.15",
-    "@angular/cli": "19.2.15",
-    "@angular/compiler": "19.2.14",
-    "@angular/compiler-cli": "19.2.14",
-    "@angular/platform-browser": "19.2.14",
-    "@angular/platform-browser-dynamic": "19.2.14",
+    "@angular-devkit/build-angular": "^20.3.10",
+    "@angular/cli": "^20.3.10",
+    "@angular/compiler": "^20.3.12",
+    "@angular/compiler-cli": "^20.3.12",
+    "@angular/platform-browser": "^20.3.12",
+    "@angular/platform-browser-dynamic": "^20.3.12",
     "@opra/client": "^1.19.7",
     "rxjs": "^7.8.2",
-    "core-js": "^3.46.0",
+    "core-js": "^3.47.0",
     "cross-fetch": "^4.1.0",
     "expect": "^30.2.0",
     "express": "^5.1.0",
-    "ng-packagr": "19.2.2",
+    "ng-packagr": "^20.3.2",
     "superagent": "^10.2.3",
     "supertest": "^7.1.4",
     "zone.js": "^0.15.1"
