--- a/examples/websocket/package.json
+++ b/examples/websocket/package.json
@@ -7,9 +7,7 @@
   "dependencies": {
     "@opra/common": "^1.19.7",
     "@opra/core": "^1.19.7",
-    "@opra/mongodb": "^1.19.7",
-    "express": "^5.1.0",
-    "mongodb": "^7.0.0",
+    "@opra/ws": "^1.19.7",
     "ts-gems": "^3.11.3"
   },
   "scripts": {
