--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
-    "mongodb": "^7.0.0",
+    "mongodb": "^6.0.0 || ^7.0.0",
     "expect": "^30.2.0",
     "sinon": "^21.0.0",
     "ts-gems": "^3.11.3"
