--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,21 +7,17 @@
   "scripts": {
     "compile": "tsc --noEmit",
     "prebuild": "npm run check && npm run lint && npm run clean",
-    "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc -b tsconfig-build-cjs.json && cp ../../support/package.cjs.json ./build/cjs/package.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json && cp ../../support/package.esm.json ./build/esm/package.json",
-    "postbuild": "npm run copy:files && npm run copy:bin && node ../../support/postbuild.cjs",
-    "copy:files": "cp README.md package.json ../../LICENSE ./build",
-    "copy:bin": "cp -R bin ./build/bin",
+    "build": "tsc -b tsconfig-build.json",
+    "postbuild": "node ../../support/postbuild.cjs && cp -R bin ./build/bin",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "format": "prettier . --write --log-level=warn",
     "check": "madge --circular src/**",
     "test": "mocha",
-    "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
+    "clean": "npm run clean:src && npm run clean:test && npm run clean:build && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ./build",
+    "clean:build": "rimraf build *.tsbuildinfo",
     "clean:cover": "rimraf ../../coverage/cli"
   },
   "dependencies": {
@@ -38,23 +34,18 @@
     "@opra/common": "^1.21.0"
   },
   "type": "module",
+  "module": "./index.js",
+  "types": "./index.d.ts",
   "exports": {
     ".": {
-      "import": {
-        "types": "./types/index.d.ts",
-        "default": "./esm/index.js"
-      },
-      "require": {
-        "types": "./types/index.d.cts",
-        "default": "./cjs/index.js"
-      },
-      "default": "./esm/index.js"
+      "types": "./index.d.ts",
+      "default": "./index.js"
     },
     "./package.json": "./package.json"
   },
-  "main": "./cjs/index.js",
-  "module": "./esm/index.js",
-  "types": "./types/index.d.ts",
+  "engines": {
+    "node": ">=20.0"
+  },
   "bin": {
     "oprimp": "bin/oprimp.mjs"
   },
@@ -63,18 +54,6 @@
     "url": "git+https://github.com/panates/opra.git",
     "directory": "packages/client"
   },
-  "engines": {
-    "node": ">=18.0",
-    "npm": ">=7.0.0"
-  },
-  "files": [
-    "bin/",
-    "cjs/",
-    "esm/",
-    "types/",
-    "LICENSE",
-    "README.md"
-  ],
   "keywords": [
     "opra",
     "cli",
