--- a/packages/http/tsconfig.json
+++ b/packages/http/tsconfig.json
@@ -1,11 +1,22 @@
 {
   "extends": "../../tsconfig-base.json",
   "include": ["src"],
+  "exclude": ["build"],
   "compilerOptions": {
+    "composite": true,
+    "incremental": true,
+    "module": "ES2020",
+    "moduleResolution": "Node",
+    "rootDir": "src",
+    "outDir": "./build",
     "baseUrl": "./",
     "paths": {
       "@opra/common": ["../common/src"],
       "@opra/core": ["../core/src"]
     }
-  }
+  },
+  "references": [
+    { "path": "../common" },
+    { "path": "../core" }
+  ]
 }
