--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -14,10 +14,10 @@
     "format": "prettier . --write --log-level=warn",
     "check": "madge --circular src/**",
     "test": "mocha",
-    "clean": "npm run clean:src && npm run clean:test && npm run clean:dist && npm run clean:cover",
+    "clean": "npm run clean:src && npm run clean:test && npm run clean:build && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:test": "ts-cleanup -s test --all",
-    "clean:dist": "rimraf ./build",
+    "clean:build": "rimraf build *.tsbuildinfo",
     "clean:cover": "rimraf ../../coverage/angular"
   },
   "dependencies": {
