--- a/packages/nestjs-socketio/tsconfig.json
+++ b/packages/nestjs-socketio/tsconfig.json
@@ -1,14 +1,27 @@
 {
   "extends": "../../tsconfig-base.json",
   "include": ["src"],
+  "exclude": ["build"],
   "compilerOptions": {
+    "composite": true,
+    "incremental": true,
+    "module": "ES2020",
+    "moduleResolution": "Node",
+    "rootDir": "src",
+    "outDir": "./build",
     "baseUrl": "./",
     "paths": {
       "@opra/common": ["../common/src"],
       "@opra/core": ["../core/src"],
       "@opra/socketio": ["../socketio/src"],
       "@opra/nestjs": ["../nestjs/src"]
-    },
-    "emitDecoratorMetadata": true
-  }
+    }
+  },
+  "references": [
+    { "path": "../common" },
+    { "path": "../core" },
+    { "path": "../socketio" },
+    { "path": "../nestjs" }
+  ]
 }
+
