--- a/package.json
+++ b/package.json
@@ -33,21 +33,22 @@
     "@panates/eslint-config": "^2.0.6",
     "@panates/eslint-config-ts": "^2.0.6",
     "@panates/tsconfig": "^2.0.6",
-    "@swc/core": "^1.15.3",
+    "@swc/core": "^1.15.7",
     "@swc/helpers": "^0.5.17",
     "@swc-node/register": "^1.11.1",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.10.1",
+    "@types/node": "^25.0.3",
     "@types/sinon": "^21.0.0",
     "@types/supertest": "^6.0.3",
     "c8": "^10.1.3",
     "chalk": "^5.6.2",
-    "esbuild": "^0.27.1",
+    "esbuild": "^0.27.2",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "madge": "^8.0.0",
     "mocha": "^11.7.5",
-    "npm-check-updates": "^19.1.2",
+    "npm-check-updates": "^19.2.0",
+    "oxc-resolver": "11.15.0",
     "prettier": "^3.7.4",
     "putil-varhelpers": "^1.6.5",
     "rimraf": "^6.1.2",
