--- a/.madgerc
+++ b/.madgerc
@@ -1,7 +1,8 @@
 {
   "detectiveOptions": {
     "ts": {
-      "skipTypeImports": true
+      "skipTypeImports": true,
+      "skipAsyncImports": true
     }
   }
 }
